fixed text alignment on video page

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -468,6 +468,7 @@ hr {
 #video {
 	width: 560px;
 	margin: auto;
+	text-align: center;
 }
 
 #not-playing {
